--- a/modelo_copin/introducao.tex
+++ b/modelo_copin/introducao.tex
@@ -12,48 +12,17 @@ Tais fatos coincidem com estereótipos comuns de mulheres em campos de STEM~\cit
 
 Esta pesquisa tem como objetivo estudar as consequências de um usuário identificar seu gênero em comunidades do StackExchange. Para atingir o nosso objetivo, estudamos usuários que participaram da comunidade e os quais podemos identificar seu gênero facilmente. Destes, os seguintes aspectos foram analisados: participação, qualidade das contribuições, tempo ativo na comunidade, contribuições ao longo do tempo. Mais ainda, estudamos como se comporta a proporção de registros por cada gênero, em cada comunidade, ao longo do tempo.
 
-Apesar de que estudos anteriores apontam que a fração de contribuidoras é bem menor do que a de contribuidores, não é claro se mulheres tendem a, individualmente, contribuir menos, por menos tempo ou têm suas contribuições vistas como de menor qualidade pela comunidade. Estas observações podem nos orientar se estas comunidades são menos acolhedoras para contribuidoras e em que aspecto. Ao mesmo tempo, se não houverem diferenças em nenhum dos aspectos estudados, poderíamos inferir que contribuições vindas de ambos os gêneros são similares, sugerindo que, apesar do número baixo, mulheres são contribuidoras de valia e incentivá-las a entrar e continuar na comunidade apenas trará melhorias para o site.
+Apesar de que estudos anteriores apontam que a fração de contribuidoras é bem menor do que a de contribuidores, não é claro se mulheres tendem a, individualmente, contribuir menos, por menos tempo ou têm suas contribuições vistas como de menor qualidade pela comunidade. Estas observações podem nos orientar se estas comunidades são menos acolhedoras para contribuidoras e em que aspecto.
+% TODO: esse parágrafo pode ser refeito
+ % Ao mesmo tempo, se não houverem diferenças em nenhum dos aspectos estudados, poderíamos inferir que contribuições vindas de ambos os gêneros são similares, sugerindo que, apesar do número baixo, mulheres são contribuidoras de valia e incentivá-las a entrar e continuar na comunidade apenas trará melhorias para o site.
 
 % TODO:
-Little sum up of the results. Similar results can be found on similar communities, like Piazza\cite{piazza:report}
+Our results point that on most of studied communities, women who identifies their gender on the site, not online contributes as much as men, but also have contributions seen as with the same quality and engage the same amount of time as men. In the communities where there is a significant difference on gender contributions, the pattern that emerges goes against stereotypes: most often, women tend to contribute more than men. Indeed, this happens even in STEM communities, and in particular it happens in StackOverflow, although in none of these communities women answer questions more often than men.
+Also related, we observe that there has been a growth on the proportion of new registrations and participation coming from women in several of the STEM related sites we study. 
 
-Estes resultados questionam o esteriótipo que mulheres são menos presentes em sites como os estudados porque suas contribuições podem não ser tão bem vindas quanto às dos homens. Em vez disso, os vários indicadores de contribuição que utilizamos mostram que mulheres que mostram seu gênero, no geral, contribuem de maneira similar aos homens com a mesma característica. Estes resultados mostram comunidades de perguntas e resposta, e em particular àquelas com assuntos relacionados a STEM, não são comunidades exclusivas para homens e necessitam de motivos alternativos para explicar o "gender gap" nestes sites. 
+% Estes resultados questionam o esteriótipo que mulheres são menos presentes em sites como os estudados porque suas contribuições podem não ser tão bem vindas quanto às dos homens. Em vez disso, os vários indicadores de contribuição que utilizamos mostram que mulheres que mostram seu gênero, no geral, contribuem de maneira similar aos homens com a mesma característica. Estes resultados mostram comunidades de perguntas e resposta, e em particular àquelas com assuntos relacionados a STEM, não são comunidades exclusivas para homens e necessitam de motivos alternativos para explicar o "gender gap" nestes sites. 
+
+These results question the common-sense belief that women are less present in sites like those of StackExchange because their contribution are not as welcome as those from men. Instead, several indicators of contribution point that women who display their gender contribute in general similarly to men. These results portrait social Q\&A  and STEM social Q\&A sites as sites that do not systematically push away women contributors that are engaged with the community, and suggest the need to investigate alternatives to explain their gender gap. The lack of a pronounced answering behavior in STEM sites may be related to women's confidence on the field, as seen in other systems ~\cite{piazza:report}. Nevertheless, understanding that women who engage with these sites are as active as we observe suggests that for most communities, effort should be put in recruiting and early engagement. 
 
 % section introduction (end)
 
-% \begin{itemize}
-% 	\item Comunidades de perguntas e respostas e sua importância nos dias de hoje;
-% 	\item A importância da diversidade em uma comunidade;
-% 	\item Desigualdade de gênero em tecnologia;
-% 	\item Mulheres deixando o ramo antes e em maior quantidade do que homens;
-% 	\item Razões para mulheres estarem deixando a carreira: estereótipos, unfriendlyness, falta de espaço;
-% 	\item Consequências: mulheres não se identificam tanto, deixam de participar de comunidades de tecnologia, conteúdo enviesado;
-% 	\item The starting motivation for this study is a preoccupation with gender diversity. More specifically, with how women participate in contributing to Social Q\&A sites. Recent results point that only a minority of contributors in StackOverflow~\cite{Vasilescu27092013}, the largest site in the StackExchange platform, are women. Moreover, recent releases of diversity information of employees in large companies like Google~\cite{google:report} and Linkedin~\cite{linkedin:report} points out that the proportion of women in tech and leadership roles are low. This result is similar to those of some online communities related to technology like FOSS communities~\cite{rustad2011suck}. Moreover, it has been reported that in StackOverflow people who question the reason for such "gender gap" may not be understood and even mistreated\footnote{http://is.gd/eAnI8R}. These facts match the common stereotyping of women in STEM related fields~\cite{spencer1999stereotype} and women's lower influence in mixed-gender groups~\cite{karpowitz2012gender}. However, if women are currently led to contribute less than men by these communities, StackExchange sites are loosing not only potential contributors, but also the chance of producing content that addresses the views of women, and ultimately of better functioning by having more mixed gender crowds~\cite{marshall1975boys}.
-% 	\item Existem estudos de gênero em várias comunidades online, mas não nas comunidades do StackExchange como todo;
-% 	\item Objetivo: estudar o "efeito" de identificar seu gênero em comunidades do StackExchange com relação à participação, percepção de qualidade de conteúdo, tempo de atividade no site, quantidade de contribuições ao longo do tempo e proporção de usuários ativos ao longo do tempo.
-% 	\item Importância de estudar essas comunidades;
-% 	\item Responder: Por que os posts das mulheres seria diferente dos feitos por homens?
-% 	\item Mulheres tendem a se identificar menos, mas isso não é relevante, já que nós queremos ver o impacto que "ser mulher" nestas comunidades tem na participação destes usuários.
-% 	\item Estudamos os usuários que participaram da comunidade com pelo menos uma contribuição textual (comentário, pergunta ou resposta), que possuam reputação que os permita fazer todos os tipos de contribuições textuais (50 pontos) e que tenha seu gênero facilmente identificável pelos demais usuários.
-% 	\begin{itemize}
-% 		\item todas as contribuições de todos os usuários que se encaixam neste padrão, desde a criação da comunidade até setembro de 2014, foram levadas em consideração para este estudo.
-% 	\end{itemize}
-% 	\item Esperávamos que os resultados encontrados aqui batessem com o estereótipo de que mulheres não participam de comunidades online e principalmente àquelas sobre tecnologia.
-% 	\item Mulheres tendem a participar tanto quanto ou até mais do que homens na maioria das comunidades voltada para tecnologia. 
-% 	\item Resultados similares podem ser encontrados em outras comunidades como o Piazza\cite{piazza:report}
-% 	\item Este resultado é importante para acabar com estereótipos e mostrar que mulheres podem e tem seu espaço garantido em comunidades online e comunidades online sobre tecnologia.
-% \end{itemize}
-
-% \emph{Bussiness problem}: 
-
-% \emph{Technical problem}: 
-
-% Objeto de estudo: Contribuições de um usuário durante toda a sua vida ativa nos sites de Q\&A do grupo StackExchange.
-
-% Finalidade: Definir se usuários de gêneros distintos possuem diferenças de comportamento nas comunidades estudadas.
-
-% Foco de Qualidade: (com respeito à)
-
-% Perspectiva: A perspectiva será dos próprios usuários dos sites do StackExchange. Além dos administradores, tanto da plataforma inteira, quanto de cada tema, que poderão identificar os usuários que desejam manter e incentivar na comunidade.
-
-% Contexto: Comunidades de perguntas e respostas do StackExchange criadas até Setembro de 2014.
