--- a/modelo_copin/main_mestrado.tex
+++ b/modelo_copin/main_mestrado.tex
@@ -34,6 +34,20 @@
 \usepackage{longtable} %tabelas longas, para tabelas que ultrapassam uma pagina
 %\input{psfig.sty}
 
+\usepackage{balance}  % to better equalize the last page
+\usepackage{graphics} % for EPS, load graphicx instead 
+\usepackage{txfonts}
+\usepackage{times}    % comment if you want LaTeX's default font
+\usepackage[pdftex]{hyperref}
+\usepackage{url}      % llt: nicely formatted URLs
+\usepackage{color}
+\usepackage{textcomp}
+\usepackage{booktabs}
+\usepackage{ccicons}
+\usepackage{todonotes}
+\usepackage{graphicx}
+\usepackage{tabularx}
+
 
 % ----------------- Para inserir codigo fonte de linguagens de programacao no documento -------------
 \usepackage{listings}
@@ -62,9 +76,12 @@ showstringspaces=false
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\Titulo{Desmistificando Estereótipos de Gênero em Comunidades de Perguntas e Respostas}
+% \Titulo{Desmistificando Estereótipos de Gênero em Comunidades de Perguntas e Respostas}
+% \Titulo{Diferenças (e similaridades) entre gêneros quanto às suas contribuições a sites de Perguntas e Respostas}
+\Titulo{?}
+% Gender differences (and similarities) in contribution behavior on social Q\&A sites
 \Autor{Milena Sales Araujo}
-\Data{30/04/2015}
+\Data{30/06/2015}
 \Area{Ciência da Computação}
 \Pesquisa{Linha de Pesquisa}
 \Orientadores{Nazareno Ferreira de Andrade  \\
