--- a/modelo_copin/revisao.tex
+++ b/modelo_copin/revisao.tex
@@ -1,52 +1,47 @@
 %!TEX root = main_mestrado.tex
 \chapter{Revisão Bibliográfica}
 
-\begin{itemize}
-\item Male as the null gender\cite{fox2006women}
-\end{itemize}
+Baseado na psicologia dos gêneros, encontramos duas teorias principais para justificar a ausência de mulheres em campos relacionados à tecnologia: a essencialista que vê as causas na biologia e a "constructo social" que vê as causas no meio, o qual é considerado "male-friendly" mas não "female-friendly". Contudo, ainda é importante levar em consideração as diferenças individuais destas pessoas ao estudar esse gender gap~\cite{trauth2004understanding}.
 
-\begin{itemize}
-	\item Mulheres são underrepresented em campos onde acredita-se que é necessário um talento inato para poder ter sucesso na área (caso de Computação e Filosofia; Neurosciência e Astronomia não)\cite{leslie2015expectations}. Já que existe o estereótipo de que mulheres não possuem tal talento\cite{tiedemann2000gender}\cite{kirkcaldy2007parental} 
-	\item "Women and minorities, who are generally less confident to begin with, tend to doubt whether they have that mythical magic brilliance, and that can discourage them from trying fields like math or philosophy"\cite{leslie2015expectations}
-	\item Importante notar que não foi provado ainda que esse "talento inato" é exclusivo de homens ou mulheres.\cite{hyde2005gender}
-	\item "If women internalize the stereotypes, they may also decide that these fields are not for them" \cite{wigfield2000expectancy}\cite{shapiro2011major}.
-	\item Mulheres não possuem auto confiança tão alta quanto homens em ciências. \cite{fox1992confidence}
-	\item Achievements acadêmicos de mulheres (adolescentes) não têm a ver com a igualdade política, econômica ou social. Elas costumam outperform meninos em notas em disciplinas STEM related. Contudo, isso ainda deixa em aberto o porquê de tão poucas mulheres seguirem carreira na área. \cite{stoet2015sex}
-	\item Uma prova que tal estereótipo de que mulheres são menos competentes pode ser encontrado em \cite{moss2012science} onde acadêmicos de ambos os sexos não só preferem contratar homens à mulheres, como oferecem aos candidatos do sexo masculino um maior salário e melhor suporte de carreira (career mentoring).
-	\item Foi encontrado que, em canais de IRC sobre diversos assuntos, usuários que apresentam um "nick" feminino tendem a receber 25 vezes mais mensagens maliciosas que usuários com "nicks" masculinos e 4 vezes mais que usuários com "nicks" que não identificava o gênero. \cite{meyer2006assessing};
-	\item Feedback negativo pode ter um efeito negativo na comunidade, fazendo com os que o recebem continuem ativos e produzindo conteúdo de baixa qualidade\cite{cheng2014community}. O estudo mostra também que o efeito é viral: pessoas que recebem feedback negativo tendem a passá-lo para frente. Se mulheres são vistas como não tendo conhecimento suficiente para demonstrar conhecimento nestas comunidades e recebem feedback negativo nas suas contribuições, indiscriminadamente, isso pode levar a uma baixa na qualidade geral do conteúdo da comunidade toda. 
-	\item Em ambientes de aprendizado online homens interagem mais com o ambiente e postam mensagens mais longas e com um "contexto" mais social; já mulheres tendem a ter uma participação mais pontual e relacionada com o tema das aulas.\cite{barrett1999gender}
-	\item As comunidades do StackExchange podem ser vistas como um ambiente competitivo e estudos mostram que mulheres não são tão eficientes quanto homens em ambientes competitivos, principalmente quando é necessário competir com homens\cite{gneezy2003performance}. O baixo desempenho é frustrante e pode levar mulheres a sair cedo da comunidade. Um complemento sobre a diferença entre homens e mulheres em ambientes competitivos: enquanto a maioria das mulheres o evitam, homens sentem-se confortáveis em competições.\cite{niederle2005women}\cite{croson2009gender}
-	\item cursos na área de STEM são considerados competitivos. “a low proportion of women in a discipline probably sends a message to girls that the discipline is unattractive to women, and they should avoid it too” \cite{shapiro2011major}
-	\item Existem duas teorias principais sobre o motivo pelo qual mulheres não estão presentes em áreas relacionadas a IT: a essencialista que vê as causas na biologia e a "constructo social" que vê as causas no meio, o qual é considerado "male-friendly" mas não "female-friendly". Contudo, ainda é importante levar em consideração as diferenças individuais destas pessoas ao estudar esse gender gap.\cite{trauth2004understanding}
-\end{itemize}
+Nesta pesquisa estamos estudando gênero como fator social, como as pessoas se identificam, e não biológico, portanto usaremos o termo "gênero" ao invés de "sexo". Também estamos generalizando e estudando apenas os dois estremos do espectro: aqueles usuários que se identificam como homens e os que se identificam como mulheres. 
 
-% Talvez os itens abaixo se encaixem melhor na discussão.
-\begin{itemize}
-	\item Em comunidades de perguntas e respostas (não testado no StackExchange), os usuários que têm um tempo de vida maior no site preferem responder à perguntar~\cite{yang2010activity}. Isso pode se alinha com o resultado de mulheres passarem menos tempo no site, já que elas preferem perguntar.
-	\item Apesar de não ser relacionada com sua real performance, a percepção que uma pessoa tem de sua capacidade cognitiva em um campo influencia como esta pessoa acha que se sairá em uma determinada tarefa. Mais ainda, achar que não vai se dar bem em uma tarefa pode fazer com que, caso seja dada a opção, a pessoa nem chegue a realizar esta tarefa. Mulheres acham que não são boas em tarefas sobre ciência e isso às influencia a não participar do campo.\cite{ehrlinger2003chronic} Isso pode explicar porque a proporção de mulheres é tão baixa nas comunidades sobre STEM, mas elas se dão tão bem quanto homens na maioria delas. "This pattern of data suggests, by extension, that women might disproportionately avoid scientific pursuits because their self-views lead them to mischaracterize how well they are objectively doing on any given scientific task. Because they think they are doing more poorly than do men, they are more likely than men to avoid science when given an option."
-	\item Mulheres que já estão envolvidas com a comunidade tendem a continuar fazendo parte dela. Isto pode ser encontrado também em comunidades FOSS\cite{powell2010gender}.Esse artigo também mostra que todas as mulheres entrevistadas acham que confidence é importante para se manter neste tipo de comunidade.
-\end{itemize}
+\subsection{Diferenças de gênero em comunidades online}
 
-% Note to self: estou começando a achar que existe prejudice e harassment sim, mas as mulheres que conseguem se engajar com estas comunidades de tecnologia conseguem ignorar essas negatividades. Newcomers podem ver isto como barreira e nem se quer entrar na comunidade.
+O comportamento de homens e mulheres em comunidades online nem sempre é o mesmo. Podemos observar diferenças até quanto ao uso da própria internet~\cite{hargittai2006differences} e a linguagem usada online. Esta última podendo influenciar na percepção que cada gênero tem da qualidade da comunidade~\cite{Gefen:2005:YSS:1066149.1066156}.
 
-% Old references
-\begin{itemize}
-	\item Neste estudo estamos estudando gênero como fator social (como as pessoas se identificam) e não biológico, portanto usaremos o termo "gênero" ao invés de "sexo". Mais ainda, estamos generalizando e estudando apenas os dois estremos do espectro: aqueles usuários que se identificam como homens e os que se identificam como mulheres.
-	\item Mulheres têm uma performance igual a de homens em atividades matemáticas, contudo homens vêm matemática como "a guy thing" mais do que mulheres~\cite{hyde1990gender}
-	\item It has been observed that results obtained in mathematical tasks can interfere in the performer's confidence and further results, and that failing affects more women than men. It's believed that this happen because of the common belief that Mathematics is a men's field~\cite{campbell1986effects}.
-	\item In women's perspective, gender has been found to be much less influential in deciding to follow a Computer Science career than cultural or environmental conditions~\cite{blum2007cultural}.
-	\item Studies point that women who are exposed to role models in science can change their attitude towards science in a positive way~\cite{smith1986effect}, and that can have a positive impact on their educational interest~\cite{nixon1999educational}
-	\item Women behavior in online communities is not always the same as men's. Some aspects which may differ between sexes are Internet usage~\cite{hargittai2006differences} and the type of language used, which can in turn influence the perception each gender has of the community's quality~\cite{Gefen:2005:YSS:1066149.1066156}. 
-	\item Massively multi-player online role playing games (MMORPGs) communities are recently witnessing the female number of users overcoming the males one, even though these games are not designed for women~\cite{taylor2003multiple}. 
-	\item In Wikipedia, research has found that although there is a lower number of female than male users~\cite{glott2010wikipedia}, men and women seem to contribute in similar ways, with women making lenghtier contributions. However, it was found that, for women who contribute to Wikipedia, positive feedback is an important factor to improve the number of contributions made by them, as this positive feedback seems to increase their confidence about their knowledge on the field of their contribution~\cite{collier2012conflict}. Lack of confidence on their knowledge may contribute to the lower overall contribution of women in this setting, what is seen as the majority of the content of Wikipedia is provided by a male minority~\cite{antin2011gender,lam2011wp}.
-	\item More technology-oriented communities like Free Open Source Software (FOSS) communities and StackOverflow not only have low women percentage, but also low women participation~\cite{rustad2011suck} and lower women engagement~\cite{Vasilescu27092013}. Men tend to have a longer lifetime (from the day of the first contribution until the day of the last) in these communities.
-\end{itemize}
+Em ambientes de aprendizado online, homens interagem mais com o ambiente e enviam mensagens mais longas, com um contexto mais social, do que as mulheres. Estas tendem a ter uma participação mais pontual e relacionada com o tema das aulas~\cite{barrett1999gender}. Já na Wikipedia, apesar de homens e mulheres terem comportamentos de contribuição similares, as mulheres são as que produzem contribuições mais longas~\cite{glott2010wikipedia}.
 
-% % detalhes
-% \begin{itemize}
-% 	\item Vasilescu27092013 - On StackOverflow it is clear that men engage for longer periods of time thanwomen. Relative to the duration of their engagement in StackOverflow, however, women formulate more questions than men, while providing a similar number of answers. This results in a relatively ‘unhealthy’ community where women disengage sooner, although their activity levels are comparable with men’s.
-% \end{itemize}
-    
-    \bigskip
-Parágrafo resumindo o que foi visto, apontando o gap de conteúdo (mulheres em comunidades de perguntas e respostas e, principalmente, naquelas relacionadas à STEM) e afirmar que este estudo pretende preencher esse gap.
+Mudando o foco para comunidades online mais relacionadas à tecnologia, foi encontrado que, em canais de IRC sobre diversos assuntos, usuários que apresentam um pseudônimo feminino tendem a receber 25 vezes mais mensagens maliciosas que usuários com pseudônimo masculinos e 4 vezes mais que usuários com pseudônimo que não identificava o gênero~\cite{meyer2006assessing}. Isto pode ser um dos motivos pelo qual mulheres não participam tanto quanto homens deste tipo de comunidade. Contudo, observou-se também que comunidades que foram desenhadas para homens e que são conhecidas por não serem female-friendly e serem cenário de inúmeros casos de perseguição às mulheres, como as comunidades MMORPG registraram um crescimento na proporção de mulheres participantes, este número chegando até a ser maior que o de homens. 
+
+Por fim, em comunidades Free Open Source (FOSS) e na comunidade StackOverflow mulheres não são uma minoria, mas possuem uma baixa participação~\cite{rustad2011suck} e se engajam menos à comunidade~\cite{Vasilescu27092013}. Homens têm um tempo de vida maior nestas comunidades.
+
+\subsection{Feedback}
+
+Feedback mostra-se como uma ferramenta que influi bastante no comportamento dos usuários em comunidades online. Sabe-se que feedback negativo pode trazer um efeito indesejado à comunidade, fazendo com os que o recebem mantenham-se ativos e produzindo conteúdo de baixa qualidade~\cite{cheng2014community}. O estudo mostra também que o efeito é viral: pessoas que recebem feedback negativo tendem a passá-lo para frente. Em contra partida, na Wikipedia, acredita-se feedbacks positivos são um fator importante na motivação de mulheres a participar da comunidade visto que este aumenta a auto-estima delas quanto ao seu conhecimento no assunto da contribuição~\cite{collier2012conflict}.
+
+\subsection{Competitividade}
+
+As comunidades do StackExchange podem ser vistas como ambientes competitivos e estudos mostram que mulheres não são tão eficientes quanto homens neste tipo de ambiente, principalmente quando é necessário competir com homens~\cite{gneezy2003performance}. O baixo desempenho é frustrante e pode levar mulheres a sair cedo da comunidade. Interessante notar que enquanto a maioria das mulheres as evitam, homens sentem-se confortáveis em competições~\cite{niederle2005women,croson2009gender}.
+
+\subsection{Mulheres, STEM e autoconfiança}
+% autoconfiança = confidence.
+Vários estudos mostram que mulheres têm performance tão boa quanto a de homens em atividades de matemática~\cite{hyde1990gender,campbell1986effects} e que até costumam ter notas melhores em disciplinas relacionadas à STEM~\cite{stoet2015sex}. Mais ainda, já se sabe que a performance das mulheres neste campo não depende de igualdade política, econômica ou social~\cite{stoet2015sex}. 
+
+Mesmo assim, as mulheres são subrepresentadas em campos relacionados a STEM que acredita-se que é necessário um talento inato para poder alcançar o sucesso na área. Este é o caso de Ciência da Computação e Filosofia, por exemplo~\cite{leslie2015expectations}. O motivo para que isto aconteça pode ser a crença por parte de ambos os gêneros que mulheres não possuem tal talento~\cite{tiedemann2000gender, kirkcaldy2007parental}. Apesar de que não foi provado ainda que esse "talento inato" é exclusivo de homens ou mulheres~\cite{hyde2005gender}. Contudo, se mulheres absorverem este estereótipo, elas podem achar que estes campos não são para elas~\cite{wigfield2000expectancy,shapiro2011major}.
+
+O problema parece estar na falta de auto confiança por parte das mulheres que tendem a duvidar que possuem tal talento e sentem-se desencorajadas a tentar campos como matemática e filosofia~\cite{leslie2015expectations}. Já foi observado que mulheres realmente possuem baixa auto confiança em tarefas de ciências comparadas aos homens~\cite{fox1992confidence} e que resultados em tarefas de matemática afetam mais mulheres do que homens com relação a sua auto confiança em sua performance~\cite{campbell1986effects}. Esta falta de confiança em seu potencial já chegou até a afetar comunidades como a Wikipedia, onde a maior parte das contribuições vêm de uma minoria de homens~\cite{antin2011gender,lam2011wp}.
+
+Por outro lado, estudos apontam que mulheres que têm contato com "role models" em ciência podem mudar a sua postura com relação à disciplina de uma maneira positiva~\cite{smith1986effect}, e isto pode ter um impacto positivo em seus interesses educacionais~\cite{nixon1999educational}.
+
+\subsection{Mulheres e carreiras em STEM}
+
+Mulheres não consideram seu gênero tão influente quando decidem se querem seguir carreira em Ciência da Computação quanto condições culturais e o ambiente onde irão trabalhar~\cite{blum2007cultural}. Mas, uma baixa proporção de mulheres numa disciplina pode mandar uma mensagem negativa para mulheres, como se a disciplina não fosse interessante para as outras e que elas a deveriam evitá-la também~\cite{shapiro2011major}.
+
+Contudo, o preconceito com mulheres na área ainda é muito forte. Uma prova que tal estereótipo de que mulheres são menos competentes pode ser encontrado em ~\cite{moss2012science} onde acadêmicos de ambos os sexos não só preferem contratar homens à mulheres, como oferecem aos candidatos do sexo masculino um maior salário e melhor suporte de carreira (career mentoring). Isso se alinha com o estudo que mostra que homens consideram matemática como "coisa de homem" mais do que mulheres~\cite{hyde1990gender}.
+% TODO: verificar em qual área é a pesquisa de moss2012science e colocar aqui.
+
+\bigskip
+
+% TODO: Último parágrafo resumindo tudo. O antigo para me inspirar:
+% Taken together, the literature points that although one should not expect women to have less ability in STEM-related tasks, the environment they live in and how they receive performance feedback seems to be determinant on how women relate to STEM. These same factors seem to play a role in some online communities. Our study contributes to this body of knowledge by investigating how women contribute in STEM Social Q\&A online communities. On the one hand, these are environments closely related to the STEM field. On the other hand, from the perspective of research, gender differences have been little explored in this point of the online communities design space. 
+
