--- a/modelo_copin/conclusoes.tex
+++ b/modelo_copin/conclusoes.tex
@@ -1,12 +1,22 @@
 %!TEX root = main_mestrado.tex
 \chapter{Conclusões}
 
-\begin{itemize}
-	\item Parágrafo resumindo o que foi feito e um pouco dos resultados;
-	\item Parágrafo sobre confidence e como isso pode ter influenciado na participação de mulheres e nos resultados que encontramos;
-	\item Parágrafo comparando o resultado que achamos com o resultado em outras comunidades;
-	\item Parágrafo falando como este estudo pode ajudar no gender gap problem;
-	\item Como este trabalho pode ajudar a melhorar as comunidades?
-	\item Falar sobre trabalhos futuros;
-	\item Já se sabe que pessoas podem ser influenciadas quanto à maneira que elas acham que vão se sair em uma certa task e que isto pode influenciar na sua vontade de participar de algo \cite{ehrlinger2003chronic}. É possível que estes resultados mudem a percepção de mulheres sobre sua participação no site e as faça participar mais.
-\end{itemize}
+This paper took an alternative approach into gender studies in Q\&A online communities, changing the focus from the number of users of each sex to their participation, quality of contributions and engagement. Overall, our results show that, individually, women who display their gender information do engage to these sites as much as men do. In several sites, women indeed tend to individually contribute more than men. 
+
+Similarly to Wikipedia~\cite{lam2011wp}, women contribute with relevant content in Q\&A sites, but the vast majority of the contributions still comes from men. It is known that a diverse environment can benefit a community, and our study also quantifies that after joining the Q\&A communities we study, women seem to have no barrier for producing valuable content and engaging as much as men with the system. Our study does not focus on investigating why there are sensibly fewer women in StackExchange communities. However, it stresses that not including or motivating women to join can be a wastage of valuable and loyal contributors.
+
+An interesting perspective on these results is that the realization of how active participating women are in these communities is a knowledge that can be leveraged to foster women participation there. Women tend to respond well to role models~\cite{smith1986effect, nixon1999educational}, though present women contributors found on these communities may be used as role models to encourage women who are presently lurking. Also, knowing that women can get along on these communities may influence women's perception of how well they can perform, thereafter changing their willing to participate on the community~\cite{ehrlinger2003chronic}.
+
+In brief, our study results contradict several common beliefs and part of the prior research related to gender, STEM and online Question and Answer communities. This seems like a pertinent reminder that the gender gap is a problem that can appear in many forms and a single solution is not enough. In our case, there seems to exist a barrier to start contributing or display oneself as a women, and sometimes for women to remain engaged. Differently, less effort seems needed to have women contributors participate further while engaged. 
+
+Finally, it is important to remark that the knowledge about the precise differences in contribution behavior for men and women should not only lead to reduce disparity on women proportion in Q\&A sites. By allowing for that and increasing their participation on these communities, this should also pave the way for increasing diversity in general, accounting for other minorities.
+
+
+\chapter{Limitações}
+In spite of the insights given in this paper, this study is not conclusive in itself. For following up on this research, a qualitative enquire seems paramount to deepen the analysis started here. Also, widening the factors related to participation can help put our results in perspective.
+
+Regarding gender definition, our samples were limited by the users who identified themselves through names listed in the Global Name Data. This approach likely under represents users from countries whose names are not well represented in name registrations in the UK and US. Future research could also compare the effect of a user disclosing his or her gender through other means, such as an avatar. 
+
+Although our sample of sites has a significant diversity in themes, all the sites we study are from the StackExchange platform. Contrasting these results with sites that have similar purpose but a different design may help us further understand the interplay between site design, community composition, and behavior. 
+
+Finally, our quantitative approach and the dataset used do not allow us to delve into the reasons for several of the differences and similarities found. Qualitative studies that complement our enterprise seem necessary and timely. 
