--- a/modelo_copin/resultados.tex
+++ b/modelo_copin/resultados.tex
@@ -1,62 +1,99 @@
 %!TEX root = main_mestrado.tex
 \chapter{Resultados}
 
-\begin{itemize}
-	\item 
-\end{itemize}
+%!TEX root = proceedings.tex
+\section{Results} % (fold)
+\label{sec:results}
 
-\section{Número} % (fold)
-\label{sec:numero}
+\begin{figure}
+  \raggedleft
+  \includegraphics[width=1\columnwidth]{figures/questions_women.pdf}
+  \caption{Comparison of the number of questions posted by contributors of different gender in sites where a significant difference was identified and women contribute with more questions. The box represents the quartiles of the distributions, while the whiskers show the 1st and 99th percentile values. Recall that a MMW test may find significant difference in rank sum even if some of the quartiles are similar for the two samples. For visualizing the distributions on a log scale, the value we display is the number of contributions of each user plus one. }~\label{figure:questions}
+\end{figure}
 
-\begin{itemize}
-	\item Q1H1: Em 25 de 29 comunidades mulheres perguntam mais do que homens. Excessões: homebrew, german, poker, gardening. Maioria em que homens perguntam mais é da categoria culture-recreation. Apenas uma comunidade onde mulheres perguntam mais é de culture-recreation.
-	\item Q1H2: Mulheres 20/34, 14/34 homens respondem mais. Das comunidades que homens respondem mais, a maioria está nas categorias technology, science. Das comunidades que mulheres responderam mais, a maioria está em culture-recreation e life-arts. As comunidades de tecnologia e ciência que as mulheres respondem mais são conhecidas por ter mais mulheres na área (ux, sqa, biology)
-	\item Q1H3: Homens comentam mais em 8/17 e mulheres em 9/17. Maioria das mulheres em technology e maioria dos homens em culture-recreation.
-	\item Q1H4: Mulheres tem maiores contribuições em 14/19 e homens em 5/19. Homens tem maioria de contribuições em comunidades culture-recreation e science. Mulheres em technology.
-\end{itemize}
+This section presents the results for each of the four questions we address. When describing the differences in a variable for a set of sites, we use the notation $W/S/M$, with $W$ being the number of sites in which women had significantly higher values for that variable, $S$ the number of sites with no significant difference, and $M$ the number of sites in which men had significantly higher values.  
 
-% section n_mero_de_contribui_es (end)
+\subsection{Number of contributions}
+For all four types of contribution considered, a common pattern emerges in our results: the amount of contributions from men and women is not significantly different in the majority of sites (Mann-Whitney-Wilcoxon U significance tests, $\alpha = 0.05$). % [n] Show this result. TODO
 
-\section{Qualidade} % (fold)
-\label{sec:qualidade}
+For all types of contribution, when there are differences in contribution levels, there is larger number of sites in which a typical women contributor is more active than sites in which men tend to contribute more. The difference in this number is the highest for questions ($21/62/2$), followed by answers ($18/56/11$) and all contributions combined ($10/73/2$). 
 
-\begin{itemize}
-	\item Q2H1: Mulheres têm accepted rate maior em 8/13 e homens em 5/13.  Não existe uma maioria.
-	\item Q2H2: Mulheres têm mean utility maior em 10/13 comunidades e homens em 2/13 (stackoverflow e dba). ham deu NaN.
-	\item Q2H3: Mulheres têm avg score de questions maior em 6/18 comunidades e homens em 10/18. startups e poker deram NaN. Mulheres: culture-recreation e technology. Homens technology. Essa foi a única hipótese que as medianas não bateram com o p-valor.
+Interestingly, the categories in which these differences happen differ for answers in contrast with the other types of contribution. For questions, comments, and all contributions combined, the communities where women are usually more active are related to STEM categories. For questions, this distribution is $16/28/0$ for the STEM sites, as seen in Figure~\ref{figure:questions}. In contrast, when considering answers, only three of the 18 sites in which women tend to answer more are STEM sites (see Figure ~\ref{figure:answers}). Most often, sites in which women answer significantly more than men happen in the life-arts or professional categories. Also, two of the three STEM sites in which women answer more are stereotypically associated with women: UX and Software Quality Assurance. The other way around, communities which men answer more than women can be seen on Figure~\ref{figure:answers-men}.
 
-As comunidades que deram NaN foi por que não havia atividades de mulheres naquele determinado critério.
+\begin{figure}
+  % \centering
+  \raggedleft
+  \includegraphics[width=1\columnwidth]{figures/answers_women.pdf}
+  \caption{Comparison of the number of answers posted by contributors of different gender in sites where a significant difference was identified and women contribute with more answers. The box represents the quartiles of the distributions, while the whiskers show the 1st and 99th percentile values. For visualizing the distributions on a log scale, the value we display is the number of contributions of each user plus one. }~\label{figure:answers}
+\end{figure}
 
-\end{itemize}
+These results point that women who engage with most sites we study and display their gender usually do not contribute significantly less than men. In fact, when there are differences, they are most often on the opposite direction. 
+%The communities in which difference happen, however, 
+
+\subsection{Quality evaluation} % (fold)
+\label{subsec:qualidade}
+Few sites display a significant difference in how they evaluate the quality of contributions made by men and women. This difference happens less often than a difference in number of contributions. For the acceptance ratio ($7/76/2$) and mean utility of answers ($9/74/2$) from users, slightly more communities tend to attribute higher quality of the answers from women. For the average voting balance of questions posted, there is an equilibrium in the sites we study ($8/67/10$). Moreover, there seems to be no clear trend in the sites regarding the categories in which significant differences in quality evaluation happen. 
 
 % section qualidade (end)
 
-\section{Dedicação}% (fold)
-\label{sec:dedicacao}
 
-\begin{itemize}
-	\item Q3H1: Lifetime maior para homens em todas as comunidades menos wordpress. 18/19 e 1/19
-	\item Q3H2: Apenas duas comunidades homens têm frequencia de postagem maior do que mulheres: chess e movies. 12/14 e 2/14
-\end{itemize}
 
-Lembrar de citar ~\cite{Vasilescu27092013} aqui sobre o tempo de vida no SO.
+\subsection{Engagement}% (fold)
+For the metrics that consider time, the differences that we observe have a clear trend. First, for most sites, there is no significant difference in the lifetime of activity frequency of men and women. However, when differences in lifetime occur, they happen more often because men stay for longer in a community than the opposite ($1/70/14$). Conversely, the frequency of contributions in active days happens more often because women are more active than the other way around ($10/74/1$). 
 
-% section dedicacao (end)
+We also observe that the largest difference in lifetime occurs in StackOverflow, the the most popular and oldest site in StackExchange. Moreover, the following three sites with largest differences in lifetime are also old and STEM-related: MathOverflow, SuperUser and ServerFault, See Table~\ref{table:lifetime}. 
 
-\section{Contribuições Ao Longo do Tempo}% (fold)
-\label{sec:tempo}
+\begin{table}[h]
+\centering
+\begin{tabular}{@{}rllr@{}}
+\toprule
+{\small\textit{Median Diff.}} & {\small \textit{Category}} & {\small \textit{Community}} & {\small \textit{Age (mon) }} \\ \midrule
+-346.87                            & technology         & stackoverflow      & 76                 \\ \midrule
+-327.76                           & science            & mathoverflow       & 62                 \\ \midrule
+-70.93                            & technology         & superuser          & 64                 \\ \midrule
+-35.29                            & technology         & serverfault        & 67                 \\ \midrule
+-17.15                            & technology         & dsp                & 39                 \\ \midrule
+-14.50                            & technology         & apple              & 51                 \\ \midrule
+-12.62                            & life-arts          & diy                & 52                 \\ \midrule
+-9.05                             & culture-recr. & english            & 51                 \\ \midrule
+-8.80                             & life-arts          & scifi              & 46                 \\ \midrule
+-7.26                             & technology         & networkengineering & 18                 \\ \midrule
+-6.42                             & culture-recre. & mechanics          & 44                 \\ \midrule
+-4.98                             & life-arts          & photo              & 52                 \\ \midrule
+-1.92                             & culture-recre. & travel             & 41                 \\ \midrule
+-1.66                             & science            & philosophy         & 41                 \\ \midrule
+\textbf{74.72}                             & technology         & wordpress          & 51                 \\ \bottomrule
+\end{tabular}
+\caption{Sites where we can see a significant difference, the median difference in days and it's age, in months}~\label{table:lifetime}
+\end{table}
 
-\begin{itemize}
-	\item Q4H1: Na maioria das comunidades a contribuição feita por mulheres está aumentando (20/27 - 7/27) a maioria na categoria technology e culture-recreation. Homens contribuem mais em technology tbm. Mas, coeficientes são ínfimos. 
-\end{itemize}
+For frequency, a different pattern happens. In all seven STEM sites for which there is a difference in the frequency of activity, women have a higher frequency than men. Together with the lifetime results, this suggests that although women leave the community sooner than men, they act more while they are still engaged with the community.
+
+
+\subsection{Contributions and registrations over time}
+For the dynamics of contributions coming from men and women, we see that in roughly a quarter of the sites, the fraction of contributions coming from women is increasing ($20/60/5$). Albeit less pronounced, for the communities where proportion of registrations from different genders have a significant trend over time, it happens more often that the number of registrations coming from women is increasing: $8/76/1$. Both of these trends are also stronger considering only STEM sites: $16/25/3$ for contributions over time, and $6/38/0$ for proportion of new registrations.
+
+
+
+
+
+\subsection{A zoom in the largest sites} %  DEixamos essa seção? Retirada.
+The two largest sites of StackExchange -- StackOverflow and SuperUser -- are much larger and older than the remainder sites in our data. Because they thus own a significant proportion of all StackExchange users, we highlight their behavior. In both sites, there men have significantly longer lifetimes, and answers more questions. On the other hand, the proportion of new registrations coming from women has increased over time. 
+
+A comparison of  the number of contributions on the top five bigger StackExchange communities related to STEM can be seen on Figure~\ref{figure:top-five}.
+
+
+
+\begin{figure}
+  % \centering
+  % \raggedleft
+  \includegraphics[width=1\columnwidth]{figures/five-largest_quantity.pdf}
+  \caption{Comparison of the number of contributions posted by users of different gender in the five biggest (in user count, ordered from the most populous to the least) related to STEM on StackExchange. The box represents the quartiles of the distributions, while the whiskers show the 1st and 99th percentile values. }~\label{figure:top-five}
+\end{figure}
+% section conclusions (end)
 
 % section tempo (end)
 
-\section{Registros Ao Longo do Tempo}% (fold)
-\label{sec:registros}
 
-\begin{itemize}
-	\item Q5H1: Comunidades que a quantidade de registros de homens têm aumentado: 4/12 patents, blender, chinese, poker. Maioria que mulheres estão se cadastrando mais é na categoria technology. Anyway, coeficientes ainda são bem pequenos.
-\end{itemize}
+% section results (end)
 
-% section registros (end)
